# FixFlow

./: .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py  models.py  schemas.py
backend/app/api/: deps.py  routes.py
backend/app/services/: base.py  embedding.py  embedding_local.py  vector_store.py  vector_store_pg.py
backend/tests/: test_api_flow.py
documents/: architecture.md  userflow.md
frontend/: .env.example  .eslintrc.json  .gitignore  Dockerfile  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: IssueForm.tsx  SearchIssue.tsx  TrendingIssues.tsx
frontend/src/lib/: api.ts
